[gd_scene load_steps=4 format=3 uid="uid://duk810egukxlk"]

[ext_resource type="PackedScene" uid="uid://qj3nsj80xvr5" path="res://scenes/parallax_background.tscn" id="1_fw5ay"]
[ext_resource type="Theme" uid="uid://cxlxep458s4bf" path="res://base_theme.tres" id="2_8bgur"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="3_a0h17"]

[node name="menu" type="Node2D"]

[node name="parallax_background" parent="." instance=ExtResource("1_fw5ay")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8bgur")

[node name="main_menu" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_a0h17")

[node name="Label" type="Label" parent="CanvasLayer/Control/main_menu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "Flappy
Bird"
horizontal_alignment = 1
vertical_alignment = 1

[node name="main_buttons" type="HBoxContainer" parent="CanvasLayer/Control/main_menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="start_button" type="Button" parent="CanvasLayer/Control/main_menu/main_buttons"]
layout_mode = 2
text = "Start"

[node name="stats_button" type="Button" parent="CanvasLayer/Control/main_menu/main_buttons"]
layout_mode = 2
text = "Stats"

[node name="settings_buttons" type="MarginContainer" parent="CanvasLayer/Control/main_menu"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/main_menu/settings_buttons"]
layout_mode = 2
size_flags_horizontal = 4

[node name="sound_button" type="Button" parent="CanvasLayer/Control/main_menu/settings_buttons/HBoxContainer"]
layout_mode = 2
text = "Sound on"
